--- a/app/assets/stylesheets/awesome-share-buttons.scss
+++ b/app/assets/stylesheets/awesome-share-buttons.scss
@@ -29,6 +29,12 @@
       &:hover {
         color: #dd4b39;
       }
+    }    
+    &.awesome-share-buttons-vk {
+      color: #4c75a3;
+      &:hover {
+        color: #4c75a3;
+      }
     }
   }
 }
