removed require from sass, changed README

--- a/app/assets/stylesheets/awesome-share-buttons.scss
+++ b/app/assets/stylesheets/awesome-share-buttons.scss
@@ -1,4 +1,4 @@
-//= require "font-awesome";
+// "font-awesome" have to be required in application.scss
 
 /* OVERRIDE GEM */
 .awesome-share-buttons {
