fixed css and locales

--- a/app/assets/stylesheets/awesome-share-buttons.scss
+++ b/app/assets/stylesheets/awesome-share-buttons.scss
@@ -1,7 +1,7 @@
 // "font-awesome" have to be required in application.scss
 
 /* OVERRIDE GEM */
-.awesome-share-buttons {
+.awesome-share-buttons, .awesome-social-pages {
   display: inline-block;
   font-size: 30px;
   margin-left: 20px;
