RSS color added

--- a/app/assets/stylesheets/awesome-share-buttons.scss
+++ b/app/assets/stylesheets/awesome-share-buttons.scss
@@ -31,6 +31,12 @@
       &:hover {
         color: #4c75a3;
       }
+    }    
+    &.awesome-share-buttons-rss {
+      color: #ffa500;
+      &:hover {
+        color: #ffa500;
+      }
     }
     &.awesome-share-buttons-tumblr {
       color: #35465c;
