--- a/app/assets/stylesheets/awesome-share-buttons.scss
+++ b/app/assets/stylesheets/awesome-share-buttons.scss
@@ -14,6 +14,12 @@
         color: #3b5998;
       }
     }
+    &.awesome-share-buttons-youtube {
+      color: #e52d27;
+      &:hover {
+        color: #e52d27;
+      }
+    }
     &.awesome-share-buttons-twitter {
       color: #00aced;
       &:hover {
